# research-stuff

./: CMakeLists.txt  README.md
1_smoke_sim/: CMakeLists.txt
1_smoke_sim/2d/: CMakeLists.txt  main2.cu  scene2.h  smoke_solver2.cu  smoke_solver2.h  smoke_solver2_steps.cu  smoke_solver2_steps.h
1_smoke_sim/2d/blas/: pcg2.cu  pcg2.h
1_smoke_sim/2d/colliders/: box_collider2.h  collider2.h  sphere_collider2.h
1_smoke_sim/2d/injectors/: smoke_injector2.cu  smoke_injector2.h
1_smoke_sim/2d/integrators/: integrator2.h  maccormack_integrator2.cu  maccormack_integrator2.h  semi_lagrangian_integrator2.cu  semi_lagrangian_integrator2.h
1_smoke_sim/tests/: CMakeLists.txt  blas_tests.cu  simulation_steps_tests.cu
2_openvdb_flip/: CMakeLists.txt  a.out  main.cpp  vdb.h
2_openvdb_flip/tests/: CMakeLists.txt  main.cpp  openvdb_tests.cpp  openvdb_utils_tests.cpp  vdb_io_tests.cpp  vdb_particle_system_tests.cpp  vdb_velocity_grid_tests.cpp
2_openvdb_flip/vdb/: injector.cpp  injector.h  io.cpp  io.h  openvdb_utils.cpp  openvdb_utils.h  particle_system.cpp  particle_system.h  velocity_grid.cpp  velocity_grid.h
3_spgrid_mpm_gpu/: CMakeLists.txt  grid_domain.cpp  grid_domain.h  main.cu  particle_domain.h  simulator.h
3_spgrid_mpm_gpu/SPGrid/: SPGrid_Set.h  SPGrid_Utilities.h
4_spgrid_flip/: ADAPTIVE_SPHERE_RASTERIZER.h  Blocked_Copy_Helper.h  CMakeLists.txt  FACE_INITIALIZER.h  FLUIDS_SIMULATION_FLAGS.h  GEOMETRY_BLOCK.h  Laplace_Helper.cpp  Laplace_Helper.h  SPGrid_Block_Iterator.h  SPGrid_Saxpby.h  main.cpp
CMake/: ConfigCompilerFlags.cmake
common/: CMakeLists.txt  defs.h  render.cu  render.h
ext/: ponos.cmake  stb.cmake
